ingress-project/ingress-resources/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-service-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    service.beta.kubernetes.io/aws-load-balancer-internal: "false"
    alb.ingress.kubernetes.io/scheme: "internet-facing"    
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
             service:
               name: express-service
               port:
                 number: 8081
          - path: /web
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
